--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "matthew-dove-website",
+  "description": "Website for www.matthewdove.co.uk",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Matt Dove <m.j.dove89@gmail.com>",
   "dependencies": {
     "gatsby": "^2.0.19",
     "gatsby-image": "^2.0.15",
+    "gatsby-plugin-canonical-urls": "2.0.7",
+    "gatsby-plugin-google-analytics": "2.0.7",
     "gatsby-plugin-manifest": "^2.0.5",
-    "gatsby-plugin-offline": "^2.0.11",
+    "gatsby-plugin-offline": "2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-robots-txt": "1.3.0",
     "gatsby-plugin-sharp": "^2.0.7",
+    "gatsby-plugin-sitemap": "2.0.2",
+    "gatsby-plugin-typography": "2.2.1",
     "gatsby-source-filesystem": "^2.0.4",
     "gatsby-transformer-sharp": "^2.1.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-typography": "0.16.13",
+    "typography": "0.16.17"
   },
   "keywords": [
     "gatsby"
@@ -22,8 +29,8 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
-    "start": "npm run develop",
+    "postbuild": "gatsby serve -o",
+    "start": "gatsby develop -o",
     "format": "prettier --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -32,6 +39,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/zedonkey/matthew-dove-website"
   }
 }
